--- a/styles.css
+++ b/styles.css
@@ -1,97 +1,53 @@
-*{
-    box-sizing: border-box;
+.main{
+    margin: 20px 0;
 }
 
-.heading1 {
-    margin-left: 30px;
-
-}
-.heading-underscore{
-    
-    margin: 10px 0;
-    margin-left: 20px;
-    display: block;
-    height: 2px;
-    background-color: #044f8d;
-    width: 50px;
-}
-
-.main {
-    margin: auto 20px;
-}
-
-.personal-information-form {
+.personal-information-fieldset {
+    border: none;
     display: flex;
     flex-direction: column;
 }
 
-.input-field1 {
+.input-elements {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
     margin: 10px 0;
+}
+
+.input-fields {
     border: 1px solid black;
-    max-width: 100%;
-    width: 100%;
-    display: block;
-}
-
-.date-of-birth-field {
-    opacity: 0%;
-    position: absolute;
-}
-
-
-.dob-input,
-.slash {
-    display: inline-flex;
-    vertical-align: middle;
-}
-
-
-.dob-input {
-    margin: 10px 0;
-    width: 18px;
-    height: 18px;
-    border: 1px solid #000;
-    cursor: pointer;
-    text-align: center;
-}
-
-.slash {
-    width: 1px;
-    height: 10px;
-    background-color: black;
-    transform: rotate(30deg);
-    margin: 0 10px;
 }
 
 .gender-fieldset {
-    padding: 0;
     border: none;
-}
-
-.gender,
-.gender-input,
-.gender-input-square-box,
-.gender-input-label {
-    display: inline-flex;
+    margin: 0;
+    padding: 0;
 }
 
 .gender-input {
-    opacity: 0%;
+    opacity: 0;
+}
+.gender-input-label {
+    cursor: pointer;
 }
 
-.gender-input-square-box {
+.input-box {
     width: 18px;
     height: 18px;
     border: 1px solid #000;
     cursor: pointer;
-}
-
-.gender-input-label {
     margin: 0 10px;
-    cursor: pointer;
 }
 
-.gender-input:checked+.gender-input-square-box {
+.gender-legend,
+.gender-input,
+.input-box,
+.gender-input-label {
+    display: inline-flex;
+}
+
+.gender-input:checked+.input-box{
     content: '';
     width: 18px;
     height: 18px;
